--- a/wiki/fr/TechDraw_ExtensionDrawCosmArc.html
+++ b/wiki/fr/TechDraw_ExtensionDrawCosmArc.html
@@ -53,7 +53,7 @@
 <p>L'outil <b>TechDraw Arc cosm&eacute;tique</b> ajoute un arc cosm&eacute;tique dans le sens anti-horaire &agrave; partir de trois sommets.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionArcExample.png&amp;filetimestamp=20210925164355&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionArcExample.png" decoding="async" width="400" height="187" class="mw-file-element" data-file-width="701" data-file-height="327"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, un arc cosm&eacute;tique ajout&eacute;</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Agrave; droite, un arc cosm&eacute;tique ajout&eacute;</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -114,15 +114,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117145537
+Cached time: 20260117145546
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.109 seconds
+CPU time usage: 0.083 seconds
+Real time usage: 0.119 seconds
 Preprocessor visited node count: 347/1000000
-Post&#8208;expand include size: 25838/2097152 bytes
-Template argument size: 10210/2097152 bytes
+Post&#8208;expand include size: 25840/2097152 bytes
+Template argument size: 10211/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -130,18 +130,18 @@ Unstrip post&#8208;expand size: 1126/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.939      1 -total
- 32.35%    9.038      1 Template:TechDraw_Tools_navi/fr
- 22.40%    6.258      2 Template:Navigation_menu_2
- 15.13%    4.226      1 Template:Userdocnavi/fr
- 14.58%    4.074      1 Template:GuiCommand/fr
- 14.48%    4.046      2 Template:Docnav/fr
-  8.63%    2.412      1 Template:Caption
-  5.88%    1.642      1 Template:Button
-  5.77%    1.611      1 Template:MenuCommand
+100.00%   24.596      1 -total
+ 37.97%    9.340      1 Template:TechDraw_Tools_navi/fr
+ 23.09%    5.679      2 Template:Navigation_menu_2
+ 22.05%    5.423      1 Template:Userdocnavi/fr
+  9.71%    2.387      2 Template:Docnav/fr
+  8.95%    2.202      1 Template:GuiCommand/fr
+  6.69%    1.646      1 Template:Button
+  6.65%    1.636      1 Template:Caption
+  5.43%    1.336      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277791-0!canonical and timestamp 20260117145537 and revision id 1739595. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277791-0!canonical and timestamp 20260117145546 and revision id 1739597. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
