--- a/wiki/fr/TechDraw_ExtensionDrawCosmArc.html
+++ b/wiki/fr/TechDraw_ExtensionDrawCosmArc.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionDrawCosmArc/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionDrawCosmArc&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionDrawCosmArc.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungHilfsbogenZeichnen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionDrawCosmArc.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionDrawCosmArc (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_ExtensionDrawCosmArc.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Dodaj &#322;uk kosmetyczny (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle3Points.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/fr">Cercle cosm&eacute;tique par 3 points</a></div>
@@ -57,16 +57,14 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Sp&eacute;cifiez &agrave; votre convenance les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
+<ol><li>Vous pouvez sp&eacute;cifier les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
 <li>S&eacute;lectionnez le premier sommet pour d&eacute;terminer le point central de l'arc.</li>
 <li>S&eacute;lectionnez le deuxi&egrave;me sommet pour d&eacute;terminer le rayon et l'angle de d&eacute;part de l'arc.</li>
 <li>S&eacute;lectionnez le troisi&egrave;me sommet pour d&eacute;terminer l'angle final de l'arc.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmArc.svg&amp;filetimestamp=20240706150330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Arc cosm&eacute;tique</a></span>.</li>
-<li>S&eacute;lectionnez le <b>TechDraw &rarr; Extensions&nbsp;: taraudages/filetages &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmArc.svg&amp;filetimestamp=20240706150330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Arc cosm&eacute;tique</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez le <b>TechDraw &rarr; Lignes centrales/filetages &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmArc.svg&amp;filetimestamp=20240706150330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Arc cosm&eacute;tique</b> du menu.</li></ul></li>
 <li>Un arc cosm&eacute;tique est ajout&eacute;.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -114,34 +112,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117145546
+Cached time: 20260117145648
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.119 seconds
-Preprocessor visited node count: 347/1000000
-Post&#8208;expand include size: 25840/2097152 bytes
-Template argument size: 10211/2097152 bytes
+CPU time usage: 0.090 seconds
+Real time usage: 0.240 seconds
+Preprocessor visited node count: 346/1000000
+Post&#8208;expand include size: 25833/2097152 bytes
+Template argument size: 10204/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1126/5000000 bytes
+Unstrip post&#8208;expand size: 1130/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.596      1 -total
- 37.97%    9.340      1 Template:TechDraw_Tools_navi/fr
- 23.09%    5.679      2 Template:Navigation_menu_2
- 22.05%    5.423      1 Template:Userdocnavi/fr
-  9.71%    2.387      2 Template:Docnav/fr
-  8.95%    2.202      1 Template:GuiCommand/fr
-  6.69%    1.646      1 Template:Button
-  6.65%    1.636      1 Template:Caption
-  5.43%    1.336      1 Template:MenuCommand
+100.00%   75.145      1 -total
+ 30.22%   22.706      1 Template:GuiCommand/fr
+ 27.57%   20.715      1 Template:TechDraw_Tools_navi/fr
+ 19.67%   14.780      2 Template:Navigation_menu_2
+ 11.75%    8.833      1 Template:Userdocnavi/fr
+ 11.11%    8.345      2 Template:Docnav/fr
+  6.05%    4.547      1 Template:MenuCommand
+  5.53%    4.157      1 Template:Button
+  5.34%    4.011      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277791-0!canonical and timestamp 20260117145546 and revision id 1739597. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277791-0!canonical and timestamp 20260117145647 and revision id 1739599. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
