--- a/wiki/Cables_Workbench.html
+++ b/wiki/Cables_Workbench.html
@@ -1,7 +1,9 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables Workbench</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Cables+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Cables_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Arbeitsbereich Cables (93% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Cables_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Arbeitsbereich Cables (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/Cables_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="Atelier Cables (33% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
+<li><a href="fr/Cables_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Atelier Cables (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="it/Cables_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Ambiente di lavoro (Workbench) per Cablaggi (100% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="pl/Cables_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="&#346;rodowisko pracy Kable (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <figure typeof="mw:File/Thumb"><a href="index.php?title=Cables_workbench_icon.svg&amp;filetimestamp=20250201205455&amp;.html" class="mw-file-description"><img src="File/Cables_workbench_icon.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a><figcaption>Cables Workbench icon</figcaption></figure>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
@@ -9,7 +11,9 @@
 </p><p>This toolset can be used to create electrical boxes or other ready to use electrical elements (the element list will hopefully be expanded in the future). These elements can be connected with fully parametric cables of different profiles, number of wires and thicknesses. There are a few predefined cable profiles here, but there is also possibility to create custom non standard profiles with a simple csv file.
 </p><p>Models built with this workbench allow easy repositioning of elements without breaking connections. Cables can adjust their shape to new positions. However, this feature is not perfect yet.
 </p><p>The workbench aims to be compatible with <a href="BIM_Workbench.html" title="BIM Workbench">BIM Workbench</a> (solid objects created here should have the same base attributes and properties as other BIM objects: materials, IFC type and IFC attributes etc.), but it can be used for purposes other than architectural designs. Since <span style="color:blue;">version 0.3.0</span> the workbench became also more suitable for modeling connections between PCBs, inside machines etc. It allows to build custom libraries of connectors, boxes and electrical devices (any help in creating, for example, a set of ready-made connectors is very welcome).
-</p><p><span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Cables_Example3.png&amp;filetimestamp=20250216055419&amp;.html" class="mw-file-description"><img src="File/Cables_Example3.png" decoding="async" width="600" height="337" class="mw-file-element" data-file-width="600" data-file-height="337"></a></span>
+</p><p>Compatibility table of current release of Cables Workbench: <a href="Cables_Compatibility_with_BIM_Workbench.html" title="Cables Compatibility with BIM Workbench">Compatibility with BIM Workbench</a>.
+</p><p><br>
+<span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Cables_Example3.png&amp;filetimestamp=20250216055419&amp;.html" class="mw-file-description"><img src="File/Cables_Example3.png" decoding="async" width="600" height="337" class="mw-file-element" data-file-width="600" data-file-height="337"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Example of wall mounted boxes and cable<br>Animated version <a href="Cables_Example1_Simple_workflow.html" title="Cables Example1 Simple workflow">here</a></p>
 <p><span typeof="mw:File"><a href="index.php?title=Cables_Example1.png&amp;filetimestamp=20251022163000&amp;.html" class="mw-file-description"><img src="File/Cables_Example1.png" decoding="async" width="600" height="400" class="mw-file-element" data-file-width="600" data-file-height="400"></a></span>
@@ -92,28 +96,28 @@
 <li>Report bugs: Please report bugs <a rel="nofollow" class="external text" href="https://github.com/sargo-devel/Cables/issues">here</a></li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20251111091746
+Cached time: 20260117154333
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.128 seconds
-Real time usage: 0.179 seconds
-Preprocessor visited node count: 246/1000000
+CPU time usage: 0.116 seconds
+Real time usage: 0.281 seconds
+Preprocessor visited node count: 247/1000000
 Post&#8208;expand include size: 2840/2097152 bytes
 Template argument size: 436/2097152 bytes
 Highest expansion depth: 4/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 838/5000000 bytes
+Unstrip post&#8208;expand size: 1209/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.781      1 -total
- 51.37%    2.456      1 Template:TOCright
- 40.05%    1.915      3 Template:Caption
+100.00%    6.095      1 -total
+ 60.36%    3.679      3 Template:Caption
+ 34.60%    2.109      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:370931-0!canonical and timestamp 20251111091746 and revision id 1687023. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:370931-0!canonical and timestamp 20260117154328 and revision id 1739600. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
