--- a/wiki/Project_template.html
+++ b/wiki/Project_template.html
@@ -1,20 +1,11 @@
-<link href="site.css" rel="stylesheet" type="text/css"/>
-<div class="mw-page-container"><h1 class="firstHeading mw-first-heading" id="firstHeading"><span class="mw-page-title-main">Project template</span></h1><div class="mw-parser-output"><p>This template is the guideline for a FreeCAD development project. It follows the rules of the <a class="external text" href="http://en.wikipedia.org/wiki/Getting_Things_Done#Methodology" rel="nofollow">Getting Things Done (GTD)</a> process. The projects are collected in the <a href="Development_roadmap.html" title="Development roadmap">Development roadmap</a>.
-</p><p><i>Lets start by looking at the Natural Planning Model. The Natural Planning Model really is nothing new. It is not some fantastic new model devised by David Allen to help us plan and manage our projects. it is however, the planning model that is recommended by David in his Getting Things Done book. The Natural Planning Model is based upon the planning that we do on a daily basis, using just our brains. For example, think of how many tasks we plan on a day by day basis that we do not even bother to write down as these are normally classed as mundane tasks. For example, getting dressed, or driving to work. All of these can be thought of tasks but we just go ahead and plan them without any thought whatsoever. We utilize the planning aspects of our brain that are conditioned for this natural type of planning.</i>
+<link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Project template</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><p>This template is the guideline for a FreeCAD development project. It follows the rules of the <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Getting_Things_Done#Methodology">Getting Things Done (GTD)</a> process. The projects are collected in the <a href="Development_roadmap.html" title="Development roadmap">Development roadmap</a>.
+</p><p><i>Lets start by looking at the Natural Planning Model. The Natural Planning Model really is nothing new. It is not some fantastic new model devised by David Allen to help us plan and manage our projects. It is however, the planning model that is recommended by David in his Getting Things Done book. The Natural Planning Model is based upon the planning that we do on a daily basis, using just our brains. For example, think of how many tasks we plan on a day by day basis that we do not even bother to write down as these are normally classed as mundane tasks. For example, getting dressed, or driving to work. All of these can be thought of tasks but we just go ahead and plan them without any thought whatsoever. We utilize the planning aspects of our brain that are conditioned for this natural type of planning.</i>
 </p><p><i>You mind goes through five steps to accomplish virtually any task. These five steps are:</i>
-</p><p><br/>
+</p><p><br>
 </p>
-<div aria-labelledby="mw-toc-heading" class="toc" id="toc" role="navigation"><input class="toctogglecheckbox" id="toctogglecheckbox" role="button" style="display:none" type="checkbox"/><div class="toctitle" dir="ltr" lang="en"><h2 id="mw-toc-heading">Contents</h2><span class="toctogglespan"><label class="toctogglelabel" for="toctogglecheckbox"></label></span></div>
-<ul>
-<li class="toclevel-1 tocsection-1"><a href="#Purpose_and_principles"><span class="tocnumber">1</span> <span class="toctext">Purpose and principles</span></a></li>
-<li class="toclevel-1 tocsection-2"><a href="#Outcome"><span class="tocnumber">2</span> <span class="toctext">Outcome</span></a></li>
-<li class="toclevel-1 tocsection-3"><a href="#Brainstorming"><span class="tocnumber">3</span> <span class="toctext">Brainstorming</span></a></li>
-<li class="toclevel-1 tocsection-4"><a href="#Organizing"><span class="tocnumber">4</span> <span class="toctext">Organizing</span></a></li>
-<li class="toclevel-1 tocsection-5"><a href="#Next_actions"><span class="tocnumber">5</span> <span class="toctext">Next actions</span></a></li>
-</ul>
-</div>
+<meta property="mw:PageProp/toc">
 <h2><span class="mw-headline" id="Purpose_and_principles">Purpose and principles</span></h2>
-<p><i>The first step in the model is to define <b>purpose and principles</b>. Think about the last time you booked a family holiday. There is always a purpose for the holiday. This could be to take a well earned break from work, to relax and spend quality time with your spouse and children, or simply to go and see a specific tourist attraction whilst on your holiday. Whatever the reason, there will have been purpose and principles for your trip. You don’t just get up one day and go on holiday, you implement stage one of the natural planning model and this is to have a purpose for the trip.</i>
+<p><i>The first step in the model is to define <b>purpose and principles</b>. Think about the last time you booked a family holiday. There is always a purpose for the holiday. This could be to take a well earned break from work, to relax and spend quality time with your spouse and children, or simply to go and see a specific tourist attraction whilst on your holiday. Whatever the reason, there will have been purpose and principles for your trip. You don&rsquo;t just get up one day and go on holiday, you implement stage one of the natural planning model and this is to have a purpose for the trip.</i>
 </p>
 <h2><span class="mw-headline" id="Outcome">Outcome</span></h2>
 <p><i>The second step is <b>outcome visioning</b>. Once you had defined a purpose and the principle for your holiday, the next thing you will have done is to have a vision of the outcome, in other words, where do you want to go, when, and who with? This is classed as outcome visioning as you are thinking about the outcome of your holiday and making mental notes about what you want the outcome to be.</i>
@@ -32,25 +23,27 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20241214204059
+Cached time: 20260117155014
 Cache expiry: 86400
 Reduced expiry: false
-Complications: [show‐toc, no‐toc‐conversion]
-CPU time usage: 0.005 seconds
-Real time usage: 0.008 seconds
+Complications: [show&#8208;toc]
+CPU time usage: 0.006 seconds
+Real time usage: 0.007 seconds
 Preprocessor visited node count: 20/1000000
-Post‐expand include size: 30/2097152 bytes
+Post&#8208;expand include size: 30/2097152 bytes
 Template argument size: 0/2097152 bytes
 Highest expansion depth: 2/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post‐expand size: 0/5000000 bytes
+Unstrip post&#8208;expand size: 0/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    0.919      1 Template:Clear
-100.00%    0.919      1 -total
+100.00%    1.080      1 Template:Clear
+100.00%    1.080      1 -total
 -->
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:394-0!canonical and timestamp 20241214204059 and revision id 1109895. Rendering was triggered because: api-parse
+
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:394-0!canonical and timestamp 20260117155109 and revision id 1739601. Rendering was triggered because: edit-page
  -->
-</div></div><script src="script.js"></script>
+</div>
+</div><script src="site.js"></script>
